# elasticache-inventory

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  Makefile  README-pt.md  README.md  SECURITY.md  coverage.xml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  release.yml
elasticache_scanner/: __init__.py  __main__.py  aws_utils.py  cli.py  config.py  reports.py  scanner.py
tests/: test_aws_utils.py  test_config.py  test_scan_flags.py
