[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elasticache-inventory"
version = "1.0.0"
description = "ElastiCache inventory tool for AWS accounts"
authors = [{name = "Cloud Platform Team"}]
requires-python = ">=3.8"
dependencies = [
    "boto3",
    "pandas",
    "openpyxl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8", 
    "mypy",
    "pre-commit",
    "isort",
    "pytest",
    "pytest-cov",
]

[project.scripts]
elasticache-inventory = "elasticache_scanner.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["elasticache_scanner*"]
exclude = ["test_venv*"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | test_venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
known_first_party = ["elasticache_scanner"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "boto3.*", 
    "botocore.*"
]
ignore_missing_imports = true